samples/_failures_safe/1761608838_c5de5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf48c6c2.c: In function ‘main’:
./samples/SAFE/__tmp_bf48c6c2.c:165:1: error: expected declaration or statement at end of input
  165 | int main() {
      | ^~~
